# DGStomp

./: CMakeLists.txt  generate_xcode.sh
Patch/: DGStomp.cmajorpatch  DGStompAmp.cmajor  DGStompUI.js
Source/: DGStompDSP.h  DGStompEditor.h  DGStompProcessor.cpp  DGStompProcessor.h
